enh(deps) Prepare Java 21 compilation