@@ -84,6 +84,7 @@
     <file.encoding>UTF-8</file.encoding>
 
     <!-- Project properties -->
+    <javaSourceVersion>17</javaSourceVersion>
     <javaVersion>17</javaVersion>
 
     <!-- Commons versions -->
@@ -121,7 +122,7 @@
     <javassist.version>3.29.2-GA</javassist.version>
     <cglib.version>3.3.0</cglib.version>
     <ehcache.version>3.8.1</ehcache.version>
-    <lombok.version>1.18.24</lombok.version>
+    <lombok.version>1.18.30</lombok.version>
     <xmlquery.version>3.8</xmlquery.version>
     <jdom2.version>2.0.6.1</jdom2.version>
     <jaxen.version>1.2.0</jaxen.version>
@@ -1263,12 +1264,13 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${compilerPluginVersion}</version>
           <configuration>
-            <source>${javaVersion}</source>
+            <source>${javaSourceVersion}</source>
             <target>${javaVersion}</target>
             <debug>true</debug>
             <encoding>${project.build.sourceEncoding}</encoding>
             <compilerArgs>
-              <arg>--enable-preview</arg>
+              <!-- Required for Java 17 only - FIXME: remove after migrate to Java 21 -->
+              <!--<arg>&#45;&#45;enable-preview</arg>-->
               <arg>-parameters</arg>
             </compilerArgs>
             <testCompilerArgument>-parameters</testCompilerArgument>
